<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Basic Activities Strings-->
    <string name="app_name">Hostelers</string>
    <string name="hostel_list_btn_text">Hostel\'s List</string>
    <string name="hostel_sign_up_text">Hostel SignUp</string>
    <string name="hostel_list_text">Select Your Hostel</string>
    <string name="submit">Submit</string>
    <string name="warden_id_text">Enter Warden Id</string>
    <string name="warden_sign_in_text">Warden SignIn</string>
    <string name="password_text">Password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_in_text">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="boarder_id_text">Enter Boarder Id</string>
    <string name="boarder_sign_in_text">Boarder Sign-in</string>
    <string name="warden_text">Warden</string>
    <string name="boarder_text">Boarder</string>
    <string name="select_user_text">Select User</string>
    <string name="id_text">Enter ID</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="new_password_text">New Password</string>


    <!-- Hostel Sign Up-->
    <string name="hostel_name_text"> Hostel Name </string>
    <string name="hostel_proof_text"><b>Add document image for proof</b>\nFile size less than 150KB </string>
    <string name="hostel_location_text"> Hostel Location </string>
    <string name="hostel_warden_name">Warden/Owner Name</string>
    <string name="hostel_upload_description">Upload Hostel Proof Document</string>
    <string name="document_upload">Choose File</string>


    <!-- Sign Up Activity Strings-->
    <string name="title_activity_sign_up">SignUpActivity</string>


    <string name="tab_text_1">Form</string>
    <string name="tab_text_2">Rules</string>
    <string name="tab_text_3">Documents</string>
    <string name="tab_text_4">Payment</string>


    <!-- spinner values for form designation -->
    <string-array name="designation_values">
        <item>Student</item>
        <item>Employee</item>
        <item>Other</item>
    </string-array>

    <!--Form tab strings -->
    <string name="form_boarder_name">Name</string>
    <string name="form_email">Email</string>
    <string name="form_father_name">Father\'s Name</string>
    <string name="form_phone_number">Mobile Number</string>
    <string name="form_designation">Select Designation</string>

    <!-- rules tab strings-->
    <string name="agreement_text">I agree to the above rules</string>
    <string name="rules_text_view">Rules</string>
    <string name="hostel_rules_text_view">Hostel Rules</string>
    <string name="rules_content">
        * No Outside Food Allowed
        \n* Not outsiders Allowed to the Hostel
        \n* Don\'t waste Food\n* Food is available 3 times a day
        \n* Food cannot be taken to the Room
        \n* Don\'t waste water\n* Hostel Gates are closed by 10pm
        \n* Timings of food may change
        \n* 3 Per room
        \n* Hostel bill must be paid on time
        \n* Option to pay bill online
    </string>
    <string name="payment_rules_heading">Payment Rules</string>
    <string name="payment_rules_content">
    Bill is generated on payment choice
    \nBill is available on joining date
    \nBill includes food and monthly rent
    \n* Monthly payment:Rs 2500/-
    \n* Quarterly payment:Rs 7500/-
    \n* Annual payment:Rs 30000/-
    </string>

    <!-- id proofs strings-->
    <string name="id_proofs_heading">Attach ID Proofs</string>
    <string name="id_proofs_rules">* ATTACH EITHER AADHAAR OR PAN CARD IMAGE FILE\n* ATTACH A PHOTOGRAPH IMAGE FILE</string>
    <string name="id_proofs_note">**<b><u>Note:</u></b>\n\tThe id proof must be less than 150kb.\n\tThe photograph(passport size) must be less than 40kb.</string>

    <string-array name="id_proofs_values">
        <item>PAN CARD</item>
        <item>AADHAAR CARD</item>
    </string-array>

    <string name="id_proof_add_photo"><b>ATTACH YOUR PHOTO</b>\n(.jpeg or .png)</string>

    <!-- payment tab strings-->
    <string name="payments_choice_heading">Choose your Hostel Payment Method:</string>
    <string name="hostel_payment_choice1">Monthly</string>
    <string name="hostel_payment_choice2">Quarterly</string>
    <string name="hostel_payment_choice3">Annually</string>
    <string name="Fee_payment_text">Fee Payment Options:</string>
    <string name="paytm_content_description">Click on this image for Payment Through Paytm</string>
    <string name="phonepe_content_description">Click on this image for Payment Through Phonepe</string>
    <string name="stripe_content_description">Click on this image for Payment Through Paytm</string>
    <string name="google_pay_content_description">Click on this image for Payment Through Paytm</string>
    <string name="make_payment">Make Payment</string>

    <!-- Tool bar spinner values -->
    <string-array name="toolbar_spinner">
        <item></item>
        <item>Change Password</item>
        <item>Sign Out</item>
    </string-array>


    <string-array name="dummy_list_view">
        <item>NOTIFICATION 1</item>
        <item>NOTIFICATION 2</item>
        <item>NOTIFICATION 3</item>
        <item>NOTIFICATION 4</item>
        <item>NOTIFICATION 5</item>
        <item>NOTIFICATION 6</item>
        <item>NOTIFICATION 7</item>
        <item>NOTIFICATION 8</item>
        <item>NOTIFICATION 9</item>
        <item>NOTIFICATION 10</item>
        <item>NOTIFICATION 11</item>
        <item>NOTIFICATION 12</item>
        <item>NOTIFICATION 13</item>
        <item>NOTIFICATION 14</item>
        <item>NOTIFICATION 15</item>
    </string-array>


    <string-array name="issues_spinner">
        <item>Room Issue</item>
        <item>Personal Issue</item>
    </string-array>

    <string-array name="issue_category_spinner">
        <item>Electrical</item>
        <item>Water</item>
        <item>Carpentry</item>
        <item>Submit Leave Letter</item>
        <item>Health Problem</item>
    </string-array>


    <!-- boarder notify tab -->
    <string name="message_heading">Message To Boarder</string>
    <string name="message_text">Enter Message</string>
    <string name="message_button_text">Send Message</string>
    <string name="generic_message_text">Please contact me personally. I need to talk to you.</string>
    <string name="search_hint">Search By Name</string>
    <string name="notify_text">Notify</string>
    <string name="boarder_list_heading_text">Boarders List</string>

    <string name="boarder_signUp_email_text"><i>Thank you for choosing Hostelers App</i> <b><xliff:g example="XXX" id="name">%s</xliff:g></b>\nThis is your id: <xliff:g example="1234" id="b_id">%s</xliff:g>\nThis is your password: <xliff:g example="XYZ12345" id="b_pwd">%s</xliff:g>\n\nHere is the <xliff:g example="XYZ" id="hostelName">%s</xliff:g> warden details\n<b>Warden Name:</b> <xliff:g example="ABC" id="wardenName">%s</xliff:g>\n<b>Warden Mobile Number:</b> <xliff:g example="1234567890" id="wardenMobile">%s</xliff:g>\n<b>Warden Email:</b> <xliff:g example="abc@example.com" id="wardenEmail">%s</xliff:g>\n\nYou will get the room number from the warden to your mail.\n\nHope, you\'ll have a pleasant stay. Thank you.</string>
    <string name="from">From:</string>
    <string name="message_heading_text">Message</string>
    <string name="show_details_text">Show Details</string>
    <string name="boarder_name_heading">Name:</string>
    <string name="boarder_id_heading">BoarderId:</string>
    <string name="description_photo">photo</string>
    <string name="description_id_proof">id_proof</string>
    <string name="job_text">Job:</string>
    <string name="father_name_text">Father Name:</string>
    <string name="joining_date_heading_text">Joining Date:</string>
    <string name="mobile_number_heading_text">Mobile Number:</string>
    <string name="room_number_text">Room:</string>
    <string name="room_text_hint">Allocate Room Number</string>
    <string name="allocate_room_text">Allocate Room</string>

    <string name="room_mail_text">
        Hello Boarder, this is your warden from <xliff:g example="xxx hostel" id="hostelName">%s</xliff:g>\n
        Your Room number in the hostel is: <xliff:g example="1234" id="roomNumber">%s</xliff:g>.\n\n
        Thank you for choosing <xliff:g example="xxx hostel" id="hostelName">%s</xliff:g>. Hope you will have a pleasant stay.
    </string>
    <string name="previous_issues_text">Previous Issues Raised by You</string>
    <string name="issue_description_text">Issue Description</string>
    <string name="description_heading_text">Description</string>
    <string name="type_category_heading_text">Type Category:</string>
    <string name="issue_type_heading_text">Issue Type:</string>
    <string name="pay_amount">Enter the amount</string>
    <string name="payment_text">Payment</string>
    <string name="previous_payments_text">Previous Payments</string>
</resources>
