<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boarderSignIn_root_scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BoarderSignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boarderSignIn_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvBSignIn"
            style="@style/heading_style"
            android:layout_marginTop="24dp"
            android:text="@string/boarder_sign_in_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etBId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="108dp"
            android:layout_marginRight="24dp"
            android:drawableStart="@drawable/face_id"
            android:drawablePadding="8dp"
            android:hint="@string/boarder_id_text"
            android:inputType="text"
            android:maxLength="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBSignIn" />

        <EditText
            android:id="@+id/etBPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="24dp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:maxLength="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etBId" />

        <Button
            android:id="@+id/btnBSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/button_color"
            android:text="@string/sign_in_text"
            android:textColor="@color/button_text_color"
            app:layout_constraintEnd_toStartOf="@+id/btnBSignUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etBPwd" />

        <Button
            android:id="@+id/btnBSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="100dp"
            android:background="@color/button_color"
            android:text="@string/sign_up_text"
            android:textColor="@color/button_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBSignIn"
            app:layout_constraintTop_toBottomOf="@+id/etBPwd" />

        <Button
            android:id="@+id/btnBForgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:background="@color/button_color"
            android:padding="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBSignUp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>