<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/warden_notification_details_boarder_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            tools:text="123456" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_number_text"
            android:textColor="@android:color/black"
            android:layout_margin="8dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/warden_notification_details_boarder_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            tools:text="123" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/issue_type_heading_text" />

        <TextView
            android:id = "@+id/warden_notification_details_issue_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            tools:text="IssueTypeValue" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/type_category_heading_text" />

        <TextView
            android:id = "@+id/warden_notification_details_type_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            tools:text="IssueTypeValue" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/description_heading_text" />

    <TextView
        android:id = "@+id/warden_notification_details_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        tools:text="Description Text"
        />

</LinearLayout>