<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPwd_scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forgotPwd_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/heading_style"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="108dp"
            android:layout_marginRight="24dp"
            android:drawableStart="@drawable/face_id"
            android:drawablePadding="8dp"
            android:hint="@string/id_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="24dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="@string/new_password_text"
            android:inputType="textPassword"
            android:maxLength="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etId" />

        <EditText
            android:id="@+id/etRe_enterPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="24dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/password"
            android:drawablePadding="8dp"
            android:hint="@string/confirm_password_text"
            android:inputType="textPassword"
            android:maxLength="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPwd" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/button_color"
            android:text="@string/submit"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRe_enterPwd" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>